DIRAGBA-523. Added Relaunch Mechanism for AmazonDsp.

--- a/3/API/Amazon/Amazon.csproj
+++ b/3/API/Amazon/Amazon.csproj
@@ -135,6 +135,7 @@
     <None Include="$(SolutionDir)CodeAnalysis\stylecop.json">
       <Link>stylecop.json</Link>
     </None>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
