--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -528,6 +528,7 @@
     <Compile Include="Etl\AdWords\Loaders\AdWordsBaseApiLoader.cs" />
     <Compile Include="Etl\AdWords\Loaders\AdWordsConversionTypeLoader.cs" />
     <Compile Include="Etl\AdWords\Loaders\AdWordsStandartLoader.cs" />
+    <Compile Include="Etl\AmazonAttribution\Exceptions\AttributionFailedEtlException.cs" />
     <Compile Include="Etl\AmazonAttribution\Extractors\AmazonAttributionExtractor.cs" />
     <Compile Include="Etl\AmazonAttribution\Loaders\AmazonAttributionLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\Configuration\SeleniumCommandConfigurationManager.cs" />
@@ -1100,9 +1101,7 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Etl\AmazonAttribution\Exceptions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
