DIRAGBA-530 Implement analytic data synchronizer for AdWords

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -12,6 +12,7 @@
     <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="DAData" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="AnalyticData" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
@@ -94,6 +95,7 @@
     <add key="AdWordsReportFilePath" value="C:\Reports\Adwords\adwordsrep.xml" />
     <!--<add key="AdWordsReportFilePath" value="d:\local\adwordsrep.xml"/>--><!-- azure -->
 
+    <add key="AnalyticScriptsPath" value="SQL\Analytic\" />
     <add key="BingCustomerID" value="234647" />
     <add key="BingApiToken" value="" />
     <add key="BingClientId" value="" />
