--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -350,6 +350,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analytic\AdWords\AdWordsDailySummarySynchronizer.cs" />
+    <Compile Include="Analytic\AdWords\AdWordsSearchConveriosnsSynchronizer.cs" />
+    <Compile Include="Analytic\Common\BaseAnalyticSynchronizer.cs" />
+    <Compile Include="Analytic\Common\SynchronizerParamsProvider.cs" />
     <Compile Include="Bootstrappers\AutoMapperBootstrapper.cs" />
     <Compile Include="Bootstrappers\DependencyInjectionBootstrapper.cs" />
     <Compile Include="Bootstrappers\DependencyInjectionModules\DependencyInjectionModule.cs" />
