DIRAGBA-556 Add regular data migration scripts

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -284,6 +284,10 @@
     <add key="DPA_EnrichProductVolumes" value="EnrichProductVolumes.sql"/>
     <add key="DPA_EnrichTotalVolumes" value="EnrichTotalVolumes.sql"/>
     
+    <add key="DPA_SynchSbBranded" value="SynchSbBrandedTables.sql" />
+    <add key="DPA_SynchSbNonBranded" value="SynchSbNonBrandedTables.sql" />
+    <add key="DPA_SynchSpBranded" value="SynchSpBrandedTables.sql" />
+    <add key="DPA_SynchSpNonBranded" value="SynchSpNonBrandedTables.sql" />
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
     <add key="JEM_JobFailed_ToEmails" value="" />  
