--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -4,6 +4,10 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
+    <sectionGroup name="RunningJobsNames">
+      <section name="StandartTimeJobs" type="System.Configuration.DictionarySectionHandler" />
+      <section name="NonStandartTimeJobs" type="System.Configuration.DictionarySectionHandler" />
+    </sectionGroup>
   </configSections>
 
   <connectionStrings>
@@ -283,17 +287,19 @@
     <add key="DPA_EnrichBrandVolumes" value="EnrichBrandVolumes.sql"/>
     <add key="DPA_EnrichProductVolumes" value="EnrichProductVolumes.sql"/>
     <add key="DPA_EnrichTotalVolumes" value="EnrichTotalVolumes.sql"/>
-    
+
     <add key="DPA_SynchSbBranded" value="SynchSbBrandedTables.sql" />
     <add key="DPA_SynchSbNonBranded" value="SynchSbNonBrandedTables.sql" />
     <add key="DPA_SynchSpBranded" value="SynchSpBrandedTables.sql" />
     <add key="DPA_SynchSpNonBranded" value="SynchSpNonBrandedTables.sql" />
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
-    <add key="JEM_JobFailed_ToEmails" value="" />  
+    <add key="JEM_JobFailed_ToEmails" value="" />
     <add key="JEM_JobFailed_CcEmails" value="" />
     <add key="JEM_ErrorOccurred_ToEmails" value="" />
     <add key="JEM_ErrorOccurred_CcEmails" value="" />
+    <add key="JEM_JobProcessing_ToEmails" value="" />
+    <add key="JEM_JobProcessing_CcEmails" value="" />
     <add key="JEM_Failure_FromEmail" value="" />
 
     <!--Automated shut down mechanism configuration -->
@@ -592,4 +598,25 @@
         <add key = 'LoginCustomerId' value = 'INSERT_LOGIN_CUSTOMER_ID_HERE' />/n/n
     -->
   </AdWordsApi>
+  <RunningJobsNames>
+    <StandartTimeJobs>
+      <add key="synchSearchDailySummariesApple" value=""/>
+      <add key="synchSearchDailySummariesBing" value=""/>
+      <add key="synchSearchDailySummariesCriteo" value=""/>
+      <add key="daSynchRokuStats" value=""/>
+      <add key="daSyncKochavaStats" value=""/>
+      <add key="SyncAmazonVcdCommand" value=""/>
+      <add key="daSynchFacebookStats" value=""/>
+      <add key="daSynchAmazonStats" value=""/>
+      <add key="daSynchAmazonAttributionStats" value=""/>
+      <add key="daSynchCakeEventConversions" value="-d 62"/>
+    </StandartTimeJobs>
+    <NonStandartTimeJobs>
+      <add key="synchSearchDailySummariesAdWords" value="" />
+      <add key="daSynchAdformStats" value="" />
+      <add key="daSyncAmazonDspStats" value="" />
+      <add key="DASynchDBMStats" value="" />
+      <add key="daSynchDBMStats2" value="" />
+    </NonStandartTimeJobs>
+  </RunningJobsNames>
 </configuration>
