DIRAGBA-519 Delete connection string from App.config

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -11,7 +11,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=SERVER;Initial Catalog=DB;Persist Security Info=False;User ID=USER;Password=PASSWORD;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalContext" connectionString="" providerName="System.Data.EntityClient" />
     <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
