--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -4,10 +4,6 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
-    <sectionGroup name="RunningJobsNames">
-      <section name="StandartTimeJobs" type="System.Configuration.DictionarySectionHandler" />
-      <section name="NonStandartTimeJobs" type="System.Configuration.DictionarySectionHandler" />
-    </sectionGroup>
   </configSections>
 
   <connectionStrings>
@@ -301,6 +297,11 @@
     <add key="JEM_JobProcessing_ToEmails" value="" />
     <add key="JEM_JobProcessing_CcEmails" value="" />
     <add key="JEM_Failure_FromEmail" value="" />
+    
+    <add key="JobProcessing_StandartTimeJobs_Names" value="synchSearchDailySummariesApple,synchSearchDailySummariesBing,daSynchCriteoStats,daSynchRokuStats,dASynchKochavaStats,SyncAmazonVcdCommand,daSynchFacebookStats,daSynchAmazonStats,daSynchAmazonAttributionStats,daSynchCakeEventConversions"/>
+    <add key="JobProcessing_StandartTimeJobs_Parameters" value=",-h True -n True  -r True  -v 0,-x False -z 0,,,,-d 31     -x False,,-d 60,-d 62    -w True" />
+    <add key="JobProcessing_NonStandartTimeJobs_Names" value="synchSearchDailySummariesAdWords,daSynchAdformStats,daSyncAmazonDspStats,DASynchDBMStats,daSynchDBMStats2" />
+    <add key="JobProcessing_NonStandartTimeJobs_Parameters" value="-b False   -g &quot;true&quot; -k False  -n False,-x False,,-k False,"/>
 
     <!--Automated shut down mechanism configuration -->
     <add key="CommandMaxExecutionTimeInHours_Default" value="10" />
@@ -598,25 +599,4 @@
         <add key = 'LoginCustomerId' value = 'INSERT_LOGIN_CUSTOMER_ID_HERE' />/n/n
     -->
   </AdWordsApi>
-  <RunningJobsNames>
-    <StandartTimeJobs>
-      <add key="synchSearchDailySummariesApple" value=""/>
-      <add key="synchSearchDailySummariesBing" value=""/>
-      <add key="synchSearchDailySummariesCriteo" value=""/>
-      <add key="daSynchRokuStats" value=""/>
-      <add key="daSyncKochavaStats" value=""/>
-      <add key="SyncAmazonVcdCommand" value=""/>
-      <add key="daSynchFacebookStats" value=""/>
-      <add key="daSynchAmazonStats" value=""/>
-      <add key="daSynchAmazonAttributionStats" value=""/>
-      <add key="daSynchCakeEventConversions" value="-d 62"/>
-    </StandartTimeJobs>
-    <NonStandartTimeJobs>
-      <add key="synchSearchDailySummariesAdWords" value="" />
-      <add key="daSynchAdformStats" value="" />
-      <add key="daSyncAmazonDspStats" value="" />
-      <add key="DASynchDBMStats" value="" />
-      <add key="daSynchDBMStats2" value="" />
-    </NonStandartTimeJobs>
-  </RunningJobsNames>
 </configuration>
