DIRAGBA-575 Implement analytic issues alert

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -96,6 +96,7 @@
     <!--<add key="AdWordsReportFilePath" value="d:\local\adwordsrep.xml"/>--><!-- azure -->
 
     <add key="AnalyticScriptsPath" value="SQL\Analytic\" />
+    <add key="AnalyticTables" value="AdWordsSearchConveriosns, AdWordsDailySummary, AppleDailySummary, BingDailySummary, BingSearchConverions, BingCallDailySummary, FacebookAdSetSummary, AmazonAsinSummary" />
     <add key="BingCustomerID" value="234647" />
     <add key="BingApiToken" value="" />
     <add key="BingClientId" value="" />
@@ -298,11 +299,10 @@
     <add key="JEM_JobProcessing_CcEmails" value="" />
     <add key="JEM_Failure_FromEmail" value="" />
     
-    <add key="JobProcessing_StandartTimeJobs_Names" value="synchSearchDailySummariesApple,synchSearchDailySummariesBing,daSynchCriteoStats,daSynchRokuStats,dASynchKochavaStats,SyncAmazonVcdCommand,daSynchFacebookStats,daSynchAmazonStats,daSynchAmazonAttributionStats,daSynchCakeEventConversions"/>
-    <add key="JobProcessing_StandartTimeJobs_Parameters" value=",-h True -n True  -r True  -v 0,-x False -z 0,,,,-d 31     -x False,,-d 60,-d 62    -w True" />
-    <add key="JobProcessing_NonStandartTimeJobs_Names" value="synchSearchDailySummariesAdWords,daSynchAdformStats,daSyncAmazonDspStats,DASynchDBMStats,daSynchDBMStats2" />
-    <add key="JobProcessing_NonStandartTimeJobs_Parameters" value="-b False   -g &quot;true&quot; -k False  -n False,-x False,,-k False,"/>
-
+    <add key="JobProcessing_StandardTimeJobs_Names" value="synchSearchDailySummariesApple,synchSearchDailySummariesBing,daSynchCriteoStats,daSynchRokuStats,dASynchKochavaStats,SyncAmazonVcdCommand,daSynchFacebookStats,daSynchAmazonStats,daSynchAmazonAttributionStats,daSynchCakeEventConversions"/>
+    <add key="JobProcessing_StandardTimeJobs_Parameters" value=",-h True -n True  -r True  -v 0,-x False -z 0,,,,-d 31     -x False,,-d 60,-d 62    -w True" />
+    <add key="JobProcessing_NonStandardTimeJobs_Names" value="synchSearchDailySummariesAdWords,daSynchAdformStats,daSyncAmazonDspStats,DASynchDBMStats,daSynchDBMStats2" />
+    <add key="JobProcessing_NonStandardTimeJobs_Parameters" value="-b False   -g &quot;true&quot; -k False  -n False,-x False,,-k False,"/>
     <!--Automated shut down mechanism configuration -->
     <add key="CommandMaxExecutionTimeInHours_Default" value="10" />
 
