--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -192,6 +192,10 @@
     <Compile Include="MigrationsTD\202012101018443_AdjustAdfTrackingPointStructure.Designer.cs">
       <DependentUpon>202012101018443_AdjustAdfTrackingPointStructure.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\202012101432422_UpdateTrackingPointSummaryPK.cs" />
+    <Compile Include="MigrationsTD\202012101432422_UpdateTrackingPointSummaryPK.Designer.cs">
+      <DependentUpon>202012101432422_UpdateTrackingPointSummaryPK.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1271,6 +1275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202012101018443_AdjustAdfTrackingPointStructure.resx">
       <DependentUpon>202012101018443_AdjustAdfTrackingPointStructure.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202012101432422_UpdateTrackingPointSummaryPK.resx">
+      <DependentUpon>202012101432422_UpdateTrackingPointSummaryPK.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
