--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -360,6 +360,7 @@
     <Compile Include="Analytic\Common\AnalyticHealthCheckService.cs" />
     <Compile Include="Analytic\Common\BaseAnalyticSynchronizer.cs" />
     <Compile Include="Analytic\Common\AnalyticParamsProvider.cs" />
+    <Compile Include="Analytic\Facebook\FacebookActionTypeSynchronizer.cs" />
     <Compile Include="Analytic\Facebook\FacebookAdSetSynchronizer.cs" />
     <Compile Include="Bootstrappers\AutoMapperBootstrapper.cs" />
     <Compile Include="Bootstrappers\DependencyInjectionBootstrapper.cs" />
