--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -350,6 +350,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analytic\Adform\AdformLineItemSummarySynchronizer.cs" />
     <Compile Include="Analytic\AdWords\AdWordsDailySummarySynchronizer.cs" />
     <Compile Include="Analytic\AdWords\AdWordsSearchConveriosnsSynchronizer.cs" />
     <Compile Include="Analytic\Amazon\AmazonAsinSynchronizer.cs" />
