--- a/1/EomTool/HtmlEditorControl/HTMLEditorControl.csproj
+++ b/1/EomTool/HtmlEditorControl/HTMLEditorControl.csproj
@@ -90,10 +90,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.mshtml">
-      <Name>Microsoft.mshtml</Name>
-      <HintPath>..\..\..\..\Program Files\Microsoft.NET\Primary Interop Assemblies\Microsoft.mshtml.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\..\Solution\packages\Microsoft.mshtml\Microsoft.mshtml.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
