DIRAGBA-628 Add config changes.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -289,6 +289,10 @@
     <add key="DPA_SynchSbNonBranded" value="SynchSbNonBrandedTables.sql" />
     <add key="DPA_SynchSpBranded" value="SynchSpBrandedTables.sql" />
     <add key="DPA_SynchSpNonBranded" value="SynchSpNonBrandedTables.sql" />
+    <add key="DPA_SynchSbBrandedSearchTerm" value="SynchSbBrandedSearchTermTables.sql" />
+    <add key="DPA_SynchSbNonBrandedSearchTerm" value="SynchSbNonBrandedSearchTermTables.sql" />
+    <add key="DPA_SynchSpBrandedSearchTerm" value="SynchSpBrandedSearchTermTables.sql" />
+    <add key="DPA_SynchSpNonBrandedSearchTerm" value="SynchSpNonBrandedSearchTermTables.sql" />
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
     <add key="JEM_JobFailed_ToEmails" value="" />
@@ -298,7 +302,7 @@
     <add key="JEM_JobProcessing_ToEmails" value="" />
     <add key="JEM_JobProcessing_CcEmails" value="" />
     <add key="JEM_Failure_FromEmail" value="" />
-    
+
     <add key="JobProcessing_StandardTimeJobs_Names" value="synchSearchDailySummariesApple,synchSearchDailySummariesBing,daSynchCriteoStats,daSynchRokuStats,dASynchKochavaStats,SyncAmazonVcdCommand,daSynchFacebookStats,daSynchAmazonStats,daSynchAmazonAttributionStats,daSynchCakeEventConversions"/>
     <add key="JobProcessing_StandardTimeJobs_Parameters" value=",-h True -n True  -r True  -v 0,-x False -z 0,,,,-d 31     -x False,,-d 60,-d 62    -w True" />
     <add key="JobProcessing_NonStandardTimeJobs_Names" value="synchSearchDailySummariesAdWords,daSynchAdformStats,daSyncAmazonDspStats,DASynchDBMStats,daSynchDBMStats2" />
