--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -200,6 +200,10 @@
     <Compile Include="MigrationsTD\202012211016535_Mig_VCD_GlanceViews.Designer.cs">
       <DependentUpon>202012211016535_Mig_VCD_GlanceViews.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\202102191744577_AddNewVcdMetrics.cs" />
+    <Compile Include="MigrationsTD\202102191744577_AddNewVcdMetrics.Designer.cs">
+      <DependentUpon>202102191744577_AddNewVcdMetrics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1285,6 +1289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202012211016535_Mig_VCD_GlanceViews.resx">
       <DependentUpon>202012211016535_Mig_VCD_GlanceViews.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202102191744577_AddNewVcdMetrics.resx">
+      <DependentUpon>202102191744577_AddNewVcdMetrics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
