--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -99,6 +99,7 @@
     <Compile Include="VCD\Configuration\VcdConfigurationManager.cs" />
     <Compile Include="VCD\Enums\ReportType.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Models\VcdReportParameters.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Models\VcdReportParametersWithPeriods.cs" />
     <Compile Include="VCD\VcdDataProvider.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Configurations\VcdReportDownloaderSettings.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\ResponseDataConstants.cs" />
