--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -459,6 +459,7 @@
     <Compile Include="Commands\DPA\DPAProcessOrganicKeywordsData.cs" />
     <Compile Include="Commands\Selenium\SyncAmazonPdaCommand.cs" />
     <Compile Include="Commands\Selenium\SyncAmazonVcdCommand.cs" />
+    <Compile Include="Commands\Selenium\SynchAmazonVcdCustomReportsCommand.cs" />
     <Compile Include="Common\AdfStatsTypeAgg.cs" />
     <Compile Include="Common\CommandAutoStopWatcher.cs" />
     <Compile Include="Common\Email\EmailNotificationsService.cs" />
@@ -560,6 +561,24 @@
     <Compile Include="Etl\AmazonSelenium\PDA\Extractors\AmazonPdaExtractor.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Models\AmazonPdaCampaignSummary.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\PdaDataProviderBuilder.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\GeographicSalesInsightExtractor.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\NetPpmExtractor.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\RepeatPurchaseBehaviorExtractor.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\GeographicSalesInsightReportCsvParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\NetPpmReportCsvParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RepeatPurchaseBehaviorReportCsvParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\GeographicSalesInsightsProductsRowMap.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\NetPpmProductsRowMap.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\RepeatPurchaseBehaviorProductsRowMap.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\GeographicSalesInsightsLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\NetPpmLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\RepeatPurchaseBehaviorLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\GeographicSalesInsightReportData.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\GeographicSalesInsightsProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\NetPpmProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\NetPpmReportData.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\RepeatPurchaseBehaviorProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\RepeatPurchaseBehaviorReportData.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdWorkflowHelper.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Extractors\AmazonVcdExtractor.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Extractors\VcdExtractionHelpers\ReportParsing\ParsingConverters\DecimalPercentageReportConverter.cs" />
