--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VCD\Configuration\VcdConfigurationManager.cs" />
     <Compile Include="VCD\Enums\ReportType.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Models\VcdBaseReportParameters.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Models\VcdReportParameters.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Models\VcdReportParametersWithPeriods.cs" />
     <Compile Include="VCD\VcdDataProvider.cs" />
